[package]
name = "wn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
flate2 = "1.0.28"
globset = "0.4.14"
log = "0.4.21"
sha2 = "0.10.8"
walkdir = "2.5.0"
